--- a/hw1.html
+++ b/hw1.html
@@ -1,11 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="../css/hw1.css" />
+   
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Website</title>
+    <style>
+      
+.body{
+
+font-size: 18px;
+
+margin: 0;
+line-height: 1em;
+
+}
+a{
+    text-decoration: none;
+    color: black;
+}
+a:hover{
+       color:blue;
+}
+#header{
+    background: #171a21;
+    color: white;
+}
+.container{
+    width: 90%;
+    margin: auto;
+    overflow: hidden;
+}
+#nav-bar{
+    background-color: gray;
+    font-size: 18px;
+
+}
+
+#nav-bar ul{
+    list-style-type: none;
+
+    padding: 0;
+}
+#nav-bar li{
+    padding-right: 10px;
+    display: inline;
+
+
+}
+
+#section-1{
+    color: white;
+    height: 600px;
+    position: relative;
+    background: url("../images/bg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: left center;
+    text-align: left;
+    image-rendering: auto;
+}
+#section-1 h1{
+       color: gold;
+       font-size: 20px;
+       line-height: 2em;
+       width: 30%;
+       padding-top: 50px;
+
+
+
+}
+#main-bar{
+    float: left;
+    width: 70%;
+    padding: 10px;
+    box-sizing: border-box;
+}
+#side-bar{
+    float: right;
+    width: 30%;
+    box-sizing: border-box;
+
+    background: white;
+    color: black;
+    padding: 0px 20px;
+    margin-bottom: 10px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: 0.3s ;
+
+}
+#side-bar:hover{
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+.clear{
+    clear: both;
+}
+#footer{
+    background:  black;
+    color: #fff;
+    text-align: center;
+    padding: 5px;
+    font-size: 12px;
+}
+@media only screen and (max-width: 600px) {
+    #main-bar{
+        width: 100%;
+        height: none;
+
+    }
+    #side-bar{
+        width: 100%;
+        height: none;
+    }
+}
+    </style>
   </head>
   <body>
     <header id="header">
