--- a/forminput/index.html
+++ b/forminput/index.html
@@ -12,17 +12,17 @@
         <h1>Form Input</h1>
     </header>
     <section class="container">
-   <form action="">
+   <form action="" id="my-form">
     <div>
     <label for="name">Name</label>
-    <input type="text" naem="Name" placeholder="Please enter your name">
+    <input type="text" name="Name" placeholder="Please enter your name">
 </div>  
 <br> 
 <div>
     <label for="email">Email</label>
-    <input type="text" naem="Name" placeholder="Please enter your email.">
+    <input type="text" name="email" placeholder="Please enter your email.">
 </div>   
-<input type="Submit" value="Submit" >
+<input class="btn" type="Submit" value="Submit" >
 </form>
     </section>
     <script src="main.js"></script>
