--- a/forminput/index.html
+++ b/forminput/index.html
@@ -12,7 +12,8 @@
         <h1>Form Input</h1>
     </header>
     <section class="container">
-   <form action="" id="my-form">
+        
+   <form action="" id="my-form"><h3>Add User</h3>
     <div>
     <label for="name">Name</label>
     <input type="text" name="Name" placeholder="Please enter your name">
@@ -24,6 +25,11 @@
 </div>   
 <input class="btn" type="Submit" value="Submit" >
 </form>
+<ul class="iten">
+    <li class="item"> Item1   </li>
+    <li class="item"> Item2   </li>
+    <li class="item"> Item3   </li>
+    </ul>
     </section>
     <script src="main.js"></script>
     
