small js project

--- a/forminput/index.html
+++ b/forminput/index.html
@@ -14,21 +14,22 @@
     <section class="container">
         
    <form action="" id="my-form"><h3>Add User</h3>
+    <div class="msg"></div>
     <div>
     <label for="name">Name</label>
-    <input type="text" name="Name" placeholder="Please enter your name">
+    <input  type="text" name="Name" id="name" placeholder="Please enter your name">
 </div>  
 <br> 
 <div>
     <label for="email">Email</label>
-    <input type="text" name="email" placeholder="Please enter your email.">
+    <input type="text" id="email" placeholder="Please enter your email.">
 </div>   
 <input class="btn" type="Submit" value="Submit" >
 </form>
-<ul class="iten">
-    <li class="item"> Item1   </li>
+<ul class="items" id="users">
+    <!-- <li class="item"> Item1   </li>
     <li class="item"> Item2   </li>
-    <li class="item"> Item3   </li>
+    <li class="item"> Item3   </li> -->
     </ul>
     </section>
     <script src="main.js"></script>
