--- a/card animation/index.html
+++ b/card animation/index.html
@@ -6,7 +6,7 @@
     <title>001. Signin Form Animation</title>
     <script src="https://kit.fontawesome.com/c3ce1fe727.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
   </head>
   <body>
     
@@ -28,6 +28,6 @@
       </form>
     </div>
     
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
